@@ -5,6 +5,7 @@ New features:
 ..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)
 
 Bug fixes:
+..F....... [ZBX-5071] fixed macros being deleted when leaving the "macro" and "value" fields empty (Pavels)
 .......PS. [ZBX-5076] fixed possible server or proxy crash when using Calculated, DB Monitor, SSH or Telnet items (Sasha)
 A.F....... [ZBX-5032] fixed select mediatypes in User (Eduard)
 ..F....... [ZBX-4864] fixed graph Y axis label alignment (Pavels)
@@ -33,6 +34,7 @@ New features:
 ..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)
 
 Bug fixes:
+..F....... [ZBX-5071] fixed macros being deleted when leaving the "macro" and "value" fields empty (Pavels)
 .......PS. [ZBX-5076] fixed possible server or proxy crash when using Calculated, DB Monitor, SSH or Telnet items (Sasha)
 A.F....... [ZBX-5032] fixed select mediatypes in User (Eduard)
 ..F....... [ZBX-4864] fixed graph Y axis label alignment (Pavels)
